refactor log appending